# btrfs-sxbackup

./: .gitignore  pyproject.toml
btrfs_sxbackup/: __main__.py
